--- a/views/chats/index.ejs
+++ b/views/chats/index.ejs
@@ -1,9 +1,6 @@
-<!-- 考えられる追加機能 -->
-<!-- ①メッセージ検索機能　②メンバー機能（これは作るものによる　③タイトル検索　単純なものを考えれば、チャットページの作成とそのチャットの閲覧ページへの遷移だけで事足りる -->
-
 <form action="/chat/channel" method="GET">
     <input type="text" id="search" name="search" placeholder="検索">
-    <select name="sort" id="sort">
+    <select name="sort" class="sort">
         <option value=0>更新順（新）</option><!-- 流石に名称は変える -->
         <option value=1>更新順（古）</option>
         <option value=2>作成順（新）</option>
@@ -25,7 +22,7 @@
     <% }else { %>
         <div class="result">
             <p>最近更新されたチャンネル</p>
-            <% for(var i=0;i<5;i++){ %> <!-- ここの数値は迷い中 -->
+            <% for(var i=0;i<5;i++){ %>
                 <% if(channel[i]){ %>
                     <a href="/chat/<%= channel[i]._id %>"><%= channel[i].channelName %></a>
                     <p><%= channel[i].channelDetail %></p>
@@ -37,7 +34,7 @@
 </div>
 
 <div class="guide">
-    <!-- ここにこれの簡単な説明などのページを入れるかも -->
+    <!-- ここにこれの簡単な説明など -->
     <p>Guide</p>
     <a href="#">書き込み方法</a>
     <a href="#">作成方法</a>
@@ -74,32 +71,5 @@
     </div>    
 </form>
 
-<script src="/jquery/test.js"></script>
 <script src="/javascripts/chats/modalForm.js"></script>
-<script>
-    /* 後で場所を移す */
-
-</script>
-<style>
-    .popup {
-        display: none;
-        height: 100vh;
-        width: 100%;
-        background: black;
-        opacity: 0.7;
-        position: fixed;
-        top: 0;
-        left: 0;
-    }
-    .content{
-        background: #fff;
-        padding: 30px;
-        width: 50%;
-    }
-    .show {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-</style>
-<!-- cssをタグ内に作成しているものは後ほどファイルを作るのでそこに作成 -->
+<link rel="stylesheet" href="stylesheets/popup.css">
