--- a/views/users/mypage/index.ejs
+++ b/views/users/mypage/index.ejs
@@ -1,6 +1,6 @@
 <div>
     <div class="mypage-header">
-        <h2>タイトル（仮）</h2>
+        <h2>My Page</h2>
         <p>おかえりなさいませ、<%= currentUser.fullName %>さん</p>
     </div>
     <div class="account">
@@ -8,11 +8,11 @@
         <a href="/users/mypage/edit">アカウントの編集</a>
     </div>
     <div class="profile">
-        <p><a href="/users/mypage/profile">アカウント詳細設定</a>はこちらから</p><!-- p要素を用いて文書の量を後々増やす（写真やイラストを用いるかも） -->
-        
-
+        <!-- p要素を用いて文書の量を後々増やす（写真やイラストを用いるかも） -->
         <% if(currentUser.profile) { %>
             <p><a href="/users/mypage/profile/edit">アカウント詳細編集</a>はこちらから</p>
+        <% }else{ %>
+            <p><a href="/users/mypage/profile">アカウント詳細設定</a>はこちらから</p>
         <% } %>
     </div>
     <div class="delete">       
