--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -27,3 +27,4 @@
     <input type="submit" class="submit" value="送信">
 </form>
 <script src="/javascripts/users/createValidation.js"></script>
+<script src="/javascripts/users/createValue.js"></script>
