--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -44,6 +44,7 @@
         </div>
         <div class="user">
             <% if(loggedIn) { %>
+                <p>Sessionの有効期限--<%= sessionExpires %></p>
                 <p>Logged in as <a href="/users/mypage/show"><%= currentUser.fullName %></a></p>
             <% } %>
         </div>
