complete chatTime ,I will simplify the code later

--- a/views/chats/channel.ejs
+++ b/views/chats/channel.ejs
@@ -22,6 +22,9 @@
 
 
 <div id="chat">
+    <div class="chatDate">
+        <p class="dateEmitter"></p> <!-- ここに1日一度のみ出力をさせる（リロードしたら消えるように設定する・つまりsocketからの出力） -->
+    </div>
     <div class="socket-saving">
         <a href="#" class="socketUser"></a>
         <p class="socketTime"></p>
