--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,4 +1,4 @@
-<form action="/users/auth" method="GET">
+<form action="/api/users/auth" method="GET"> <!-- 一旦ここを変更する -->
     <div>
         <label for="username">Username</label>
         <input type="email" name="email" class="username">
