--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,28 +1,12 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chatter</title>
-    <link rel="stylesheet" href="/stylesheets/layout.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        <div class="header-left">
-
-        </div>
-        <div class="header-right">
-            <a href="/">Home</a>
-            <a href="/users">Account</a>
-            <a href="/chat">Chat</a>
-            <a href="/record">Record</a>
-        </div>
-        <div class="clear"></div>
-    </header>
-    
-    <div class="main">
-        <%- body %>
-    </div>
     
 </body>
 </html>
