--- a/frontend/src/styles/components/atoms/message.scss
+++ b/frontend/src/styles/components/atoms/message.scss
@@ -1,8 +1,7 @@
-
-
 .message_box {
     position: fixed;
     border: 1px solid black;
+    border-top: none;
     width: 60%;
     height: 30px;
     display: flex;
