--- a/frontend/src/styles/components/block/header.scss
+++ b/frontend/src/styles/components/block/header.scss
@@ -17,16 +17,19 @@ $tab : 520px;
 @include pc {
     .header {
         //全体には位置の固定を行う
+        z-index: 2;
+        overflow: hidden;
         position: fixed;
         top: 0;
         width: 100%;
-        height: 145px; //これに関しては効いていない（widthもかも）
+        height: auto; //これに関しては効いていない（widthもかも）
         box-sizing: border-box;
         .in_header{
             //ここの内部に枠の適用をする
             border: 1px solid rgb(94, 87, 87) ;
             .header-top {
                 .header-left {
+                    height : 125px;
                     margin: 0 10px;
                     color: rgb(62, 78, 128);
                     font-size: 18px;
@@ -54,6 +57,7 @@ $tab : 520px;
                 margin: 0 22%;
             }
             .header-buttom {
+                height : 52px ;
                 display: flex;
                 justify-content: center;//ここに関しては、文字を前半（status）,中間（:）,後半（Guest）とに分割する必要があるかも
             }
