--- a/frontend/src/styles/layouts/users/new.scss
+++ b/frontend/src/styles/layouts/users/new.scss
@@ -1,28 +1,101 @@
-.create_form {
-    margin: 145px 0; //ここに関してはヘッダの長さに応じて変える必要がある（messageの有無で決める）
+$pc : 960px;
+$tab : 520px;
 
-    h3 {
-
-    }
-    .errorMsg {
-
-    }
-    .firstName {
-
-    }
-    .lastName {
-
-    }
-    .email {
-
-    }
-    .password {
-
-    }
-    .passCheck {
-
-    }
-    .submit{
-
+@mixin pc {
+    @media(min-width: ($pc)){ //レスポンシブはwidthの変更から行う
+        @content;
     }
 }
+
+@mixin tab {
+    @media(max-width : ($tab)){
+        @content;
+    }
+}
+
+html {
+    height: 100%; 
+}
+body {
+    height: 100%;
+}
+#root {
+    height: 100%;
+}
+.user_new {
+    height: 100%;
+}
+
+.create_page {
+    background-image: linear-gradient(rgb(233, 233, 233),black);
+    z-index: 0.7;
+    text-align: center;
+    margin: 180px auto;
+    width: 100%;
+    height: 100%;
+    .empty {
+        display: flex;
+    }
+    .create-top {
+        margin-top: 60px; //これが効かないので、後で修正を加えたい。正、上にmarginをつけてしまうのはだめ（backgroudの適用範囲が狭まる）
+        .create-icon {
+            margin-top: 0;
+        }
+        .create_title {
+            font-size: 24px;
+            font-weight: bold;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            margin-top: 5px;
+        }
+        .error_code {
+            font-size: 15px;
+            color: red;
+            margin: 5px 0;
+        }
+    }
+    .create_form {
+        .block { //全てのブロックに共通なものについてはここ
+            margin: 15px 0;
+            .label {
+                display: block;
+                margin: 5px 0;
+            }
+            .error_message {
+                font-size: 12px;
+                color: yellow;
+                margin: 2px 0;
+            }
+        }
+        .name_block {
+            .input-firstName, .input-lastName {
+                width: 170px;
+                height: 18px;
+                margin: 0 5px;
+            }
+        }
+        .email_block, .password_block, .passCheck_block{
+            .input_box {
+                width: 350px;
+                height: 18px;
+            }
+        }
+        .create-submit {
+            margin-top: 30px;
+            width: 175px;
+            height: 25px;
+        }
+    }
+    .link { //現在したから数えているけど、今後ページの上下移動を鑑みると、それよりも上からの距離で統一した方が良いかも。もしくはフッターとして、常に下から一定の距離を保ち続ける
+        margin-top: 110px ;
+        .user-login {
+            text-decoration: none;
+            color: rgb(82, 73, 73);
+            &:hover {
+                text-decoration-line: underline;
+                color: red;
+            }
+        }
+    }
+}
+
+//これに関しては、レスポンシブとデザイン性を向上させたい。後はバックグラウンドの変更など。　＋アニメーション
