--- a/frontend/src/styles/components/atoms/profileComment.scss
+++ b/frontend/src/styles/components/atoms/profileComment.scss
@@ -46,28 +46,21 @@ textarea {
         margin-bottom: 50px;
         display: table;
         width: 100%;
-        height: 120px;
+        height: 90px;
         .intro-text {
-            border: 1px solid black;
             display: table-cell;
             vertical-align: middle;
-            //margin: 5px 10px;
+            padding-left: 1px;
             font-size: 18px;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-            box-sizing:border-box;
-            -moz-box-sizing:border-box; /* Firefox */
-            -webkit-box-sizing:border-box; /* Chrome, Safari */
         }
     }
 
     //パターン２
     .change-intro {
         margin-top: 40px;
-        margin-bottom: 50px;
-        display: table;
+        margin-bottom: 15px;
         width: 100%;
-        height: 120px;
 
         .error_code {
             float: left;
@@ -76,24 +69,49 @@ textarea {
             font-size: 15px;
         }
         .intro-form {
+            background-color: white;
             padding: 0;
-            font-size: 18px;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            width: 100%;
+            height: 90px;
+            display: table;
 
-            border: 1px solid black;
+            .intro-form-inner {
+                
+                width: 100%;
+                resize: none;
+                font-size: 18px;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                border: 1px solid black;
 
-            background-color: transparent;
-            box-sizing:border-box;
-            -moz-box-sizing:border-box; /* Firefox */
-            -webkit-box-sizing:border-box; /* Chrome, Safari */
+                background-color: transparent;
+                box-sizing:border-box;
+                -moz-box-sizing:border-box; /* Firefox */
+                -webkit-box-sizing:border-box; /* Chrome, Safari */
+                display: table-cell;
+                vertical-align: middle;
+            }
         }
 
-        .toCancel {
-            
+        .button {
+            display: flex;
+            justify-content: flex-end;
+            .toCancel {
+                width: 120px;
+                height: 30px;
+                box-sizing: border-box;
+                margin-top: 5px;
+                margin-right: 5px;
+            }
+            .toUpdate {
+                width: 120px;
+                height: 30px;
+                box-sizing: border-box;
+                margin-top: 5px;
+                margin-left: 5px;
+            }
         }
-        .toUpdate {
 
-        }
+        
     }
 
 }
