--- a/frontend/src/styles/layouts/users/mypage.scss
+++ b/frontend/src/styles/layouts/users/mypage.scss
@@ -1,4 +1,4 @@
-$pc : 960px;
+$pc : 960px; 
 $tab : 520px;
 
 @mixin pc {
@@ -271,6 +271,7 @@ body {
 
                     .about-top {
                         font-size: 24px;
+                        margin-top: 0;
                         border-bottom: 1px solid rgba($color: #000000, $alpha: 0.8);
                         padding: 5px 0;
                     }                    
